[gd_scene load_steps=7 format=2]

[ext_resource path="res://images/main_menu/PeasantCrawl.png" type="Texture" id=1]
[ext_resource path="res://images/main_menu/StartBlack.png" type="Texture" id=2]
[ext_resource path="res://images/main_menu/OptionsBlack.png" type="Texture" id=3]
[ext_resource path="res://images/main_menu/ExitBlack.png" type="Texture" id=4]
[ext_resource path="res://images/main_menu/MainMenuArt.png" type="Texture" id=5]
[ext_resource path="res://MainMenu.gd" type="Script" id=6]

[node name="Control" type="Control"]
anchor_right = 1.251
anchor_bottom = 1.055
margin_right = -0.0240479
margin_bottom = -6.10352e-05
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.10352e-05
margin_top = 0.902466
margin_bottom = 0.902466
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 120.0
margin_top = 80.0
margin_right = 1506.0
margin_bottom = 764.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 741.0
margin_bottom = 684.0

[node name="Title" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 741.0
margin_bottom = 151.0
size_flags_stretch_ratio = 0.8
texture = ExtResource( 1 )

[node name="Start" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 155.0
margin_right = 741.0
margin_bottom = 239.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 243.0
margin_right = 741.0
margin_bottom = 342.0
texture = ExtResource( 3 )

[node name="Exit" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 346.0
margin_right = 741.0
margin_bottom = 431.0
texture = ExtResource( 4 )

[node name="Version" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 435.0
margin_right = 741.0
margin_bottom = 435.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 745.0
margin_right = 1386.0
margin_bottom = 684.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainMenuArt" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer"]
margin_left = 50.0
margin_top = 172.0
margin_right = 346.0
margin_bottom = 512.0
texture = ExtResource( 5 )
flip_h = true
[connection signal="gui_input" from="MarginContainer/HBoxContainer/VBoxContainer" to="." method="_on_VBoxContainer_gui_input"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/Start" to="." method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/Start" to="." method="_on_Start_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/Options" to="." method="_on_Options_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/Options" to="." method="_on_Options_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_mouse_exited"]
